# mongoose

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  _clang-format  output.txt
cmake-modules/: copts.cmake  helper.cmake  platform.cmake
engine/: CMakeLists.txt  engine.sln
engine/cmake/Modules/: FindASan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  Findassimp.cmake  asan-wrapper.cmake  sanitize-helpers.cmake
engine/engine/: bufferUtils.cpp  camera.cpp  camera.h  commandBufferUtils.cpp  deferred.cpp  deferred.h  deferredRenderPass.cpp  deferredRenderPass.h  dynamicBuffers.cpp  engine.vcxproj  engine.vcxproj.filters  frameBuffer.cpp  frameBuffer.h  framebufferAttachment.cpp  framebufferAttachment.h  geometry.cpp  geometry.h  imageUtils.cpp  main.cpp  meshLoader.cpp  meshes.cpp  meshes.h  objectLoader.cpp  objectLoader.h  pipelineCreation.cpp  pipelines.cpp  pipelines.h  rendering.cpp  rendering.h  scene.cpp  scene.h  shaders.cpp  shaders.h  ssao.cpp  ssao.h  stb_font_consolas_24_latin1.inl  test.txt  textRendering.cpp  textures.cpp  textures.h  (+10 more)
engine/engine/include/glm/gtc/: matrix_transform.inl
engine/engine/include/tinyobjloader/: tiny_obj_loader.h
engine/engine/shaders/: basic.glsl  deferred.glsl  depth.glsl  drawText.glsl  mrt.glsl  shaders.bat  solid.glsl  ssao.glsl  ssaoBlur.glsl  text.glsl  utils.glsl
engine/engine/shaders/builds/: basic.frag.spv  basic.vert.spv  deferred.frag.spv  deferred.vert.spv  depth.frag.spv  depth.vert.spv  drawText.frag.spv  drawText.vert.spv  mrt.frag.spv  mrt.vert.spv  solid.frag.spv  solid.vert.spv  ssao.frag.spv  ssao.vert.spv  ssaoBlur.frag.spv  ssaoBlur.vert.spv  text.frag.spv  text.vert.spv
libs/: CMakeLists.txt
libs/SDL2-2.0.10/: CMakeLists.txt
libs/assimp/: CMakeLists.txt
libs/assimp/code/: CMakeLists.txt
libs/freetype-2.6.2/: CMakeLists.txt
libs/glfw-3.2.1/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/glm/glm/: glm.hpp
libs/imgui/: CMakeCache.txt  CMakeLists.txt  imgui.cpp  imgui.h  imgui_widgets.cpp  imstb_truetype.h  text.txt
libs/imgui/glm/: cmake_uninstall.cmake  glm.pc  glmConfig.cmake  glmConfigVersion.cmake
libs/lodepng/: CMakeLists.txt  lodepng.cpp
libs/sdfgen/: CMakeLists.txt  sdf.cpp  util.h
libs/stb/: CMakeLists.txt  tiny_obj_loader.h
libs/tiny_gltf/: CMakeLists.txt  json.hpp  stb_image_write.h  tiny_gltf.h
libs/tiny_obj_loader/: CMakeLists.txt
resources/: procedural.ray  tracing.ray
resources/data/: raptor_01.mtl
resources/data/rungholt_obj/: copyright.txt
resources/shaders/: addSource.comp  advec.comp  compileAndTransfer.bat  compileAndTransfer.sh  cubes.glsl  denoise.glsl  density.comp  depth.glsl  diffuse.comp  final.glsl  fluid.glsl  fluid2.frag  fluid2.glsl  fluid2.vert  fluidUtils.hglsl  fontRendering.glsl  frontAndBack.frag  frontAndBack.glsl  frontAndBack.vert  glsl-compiler  gltf.frag  gltf.glsl  gltf.vert  imageStorage.glsl  imgui.glsl  marching_cube_utils.hglsl  marching_cubes.comp  meshNormals.glsl  mrt.glsl  nbody.comp  noise.hglsl  octreeAlloc.comp  octreeModify.comp  octreeTag.comp  octreeTracer.glsl  particle.glsl  pbr.hglsl  postProject.comp  postProjectcomp  preProject.comp  (+23 more)
shaderCompiler/: shaderCompiler.sln
shaderCompiler/shaderCompiler/: main.cpp  shaderCompiler.vcxproj
shaderCompiler/shaderCompiler/builds/: solid.frag.spv  solid.vert.spv
src/: CMakeLists.txt  output.txt
src/engine/: CMakeLists.txt
src/engine/mg/: camera.cpp  camera.h  fonts.cpp  fonts.h  geometryUtils.cpp  geometryUtils.h  gltfLoader.cpp  logger.cpp  logger.h  meshContainer.cpp  meshContainer.h  meshLoader.h  meshUtils.cpp  meshUtils.h  mgAssert.cpp  mgAssert.h  mgSystem.cpp  mgSystem.h  mgUtils.cpp  mgUtils.h  objLoader.cpp  storageContainer.cpp  storageContainer.h  texts.cpp  texts.h  textureContainer.cpp  textureContainer.h  tools.cpp  tools.h  window.cpp  window.h
src/engine/rendering/: boxRendering.cpp  rendering.h  textRendering.cpp
src/engine/vulkan/: allocationUI.cpp  allocationUI.h  deviceAllocator.cpp  deviceAllocator.h  imguiOverlay.cpp  imguiOverlay.h  linearHeapAllocator.cpp  linearHeapAllocator.h  pipelineContainer.cpp  pipelineContainer.h  shaderPipelineInput.h  shaders.cpp  shaders.h  singleRenderpass.cpp  singleRenderpass.h  swapChain.cpp  swapChain.h  vkContext.cpp  vkContext.h  vkUtils.cpp  vkUtils.h  vkWindow.cpp  vkWindow.h
src/scenes/: CMakeLists.txt
src/scenes/boids/: CMakeLists.txt  boids.cpp  boids.h  boids_main.cpp  boids_rendering.cpp  boids_rendering.h  boids_scene.cpp  boids_scene.h  boids_simd.cpp  boids_simd.h  utils.h  v8f.h
src/scenes/cube/: CMakeLists.txt  cube_main.cpp  cube_scene.cpp
src/scenes/deferred-rendering-ssao/: CMakeLists.txt  deferred_main.cpp  deferred_rendering.cpp  deferred_rendering.h  deferred_renderpass.cpp  deferred_renderpass.h  deferred_scene.cpp  deferred_scene.h  deferred_utils.cpp  deferred_utils.h
src/scenes/fluids/: CMakeLists.txt  fluid_main.cpp  fluid_scene.cpp  navier_stoke.cpp  navier_stoke.h  navier_stroke.cpp  navier_stroke.h  navier_stroke_compute.cpp  navier_stroke_compute.h  navier_stroke_cpu.cpp  navier_stroke_cpu.h
src/scenes/gltf-rendering-pbr/: CMakeLists.txt  gltf_main.cpp  gltf_rendering.cpp  gltf_rendering.h  gltf_scene.cpp  gltf_scene.h
src/scenes/marching-cubes/: CMakeLists.txt  freeList.h  houseHolder.cpp  houseHolder.h  march_cubes.cpp  march_cubes.h  marching_cube_main.cpp  marching_cube_scene.cpp  quadtree.cpp  quadtree.h  transvoxel.cpp  transvoxel.h
src/scenes/n-body/: CMakeLists.txt  nbody_main.cpp  nbody_rendering.cpp  nbody_rendering.h  nbody_renderpass.cpp  nbody_renderpass.h  nbody_scene.cpp  nbody_scene.h  nbody_utils.cpp  nbody_utils.h
src/scenes/nv-ray/: CMakeLists.txt  ray_main.cpp  ray_rendering.cpp  ray_rendering.h  ray_renderpass.cpp  ray_renderpass.h  ray_scene.cpp  ray_utils.cpp  ray_utils.h  sobol.cpp  sobol.h
src/scenes/octree/: CMakeLists.txt  build_octree.cpp  build_octree.h  chunkedAllocator.h  empty_render_pass.cpp  empty_render_pass.h  octree_main.cpp  octree_rendering.cpp  octree_rendering.h  render_sdf.cpp  (+4 more)
(+41 files in other folders)
